--- a/numbers.html
+++ b/numbers.html
@@ -8,7 +8,7 @@
 
 </head>
 <body onload = "numbers()">
-    <h3>Numbers 1-50</h3>
+    <!-- <h3>Numbers 1-50</h3>
         <ul id = "ulCtrl"></ul>
 
         <h3>The sum of the numbers evenly divisible by 3.</h3>
@@ -16,7 +16,10 @@
         <ul id = "ulCtrl3a"></ul>
         <h3>The sum of the numbers evenly divisible by 5.</h3>
         <ul id = "ulCtrl5"></ul>
-        <ul id = "ulCtrl5a"></ul>
+        <ul id = "ulCtrl5a"></ul> -->
+
+        <lu id = "ulCtrl"></lu> 
+
 
 </body>
 </html>
