--- a/readjs.html
+++ b/readjs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Read JSON</title>
-    <script src="js/readjson.js"></script>
+    <script src="js/readjs.js"></script>
 
 </head>
 <body onload = "loaded()">
