--- a/user-detail.html
+++ b/user-detail.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/user-detail.css">
     <script src = "js/user-detail.js"></script>
 
 </head>
@@ -13,13 +14,13 @@
 <body>
     <div>
         <label>User id:</label>
-        <input id ="userid" type="text">
-        <button id = "get">Get User</button>
+        <input id ="userid" type="text" >
+        <button id = "get">Get User Detail</button>
     </div>
     <table class = "table table-sm">
         <tr>
             <th>Id:</th>
-            <td id = "eid"></td>
+            <td id = "eid" size="35"></td>
         </tr>
         <tr>
             <th>Username:</th>
