--- a/user-edit.html
+++ b/user-edit.html
@@ -12,6 +12,93 @@
 
 </head>
 <body>
-    
+    <div>
+        <label>User id:</label>
+        <input id ="userid" type="text" >
+        <button id = "get">Get User Detail</button>
+    </div>
+    <table class = "table table-sm">
+        <tr>
+            <th>Id:</th>
+            <td id = "eid" size="35"></td>
+        </tr>
+        <tr>
+            <th>Username:</th>
+            <td id = "eusername"></td>
+        </tr>
+        <tr>
+            <th>Full Name:</th>
+            <td id = "efullname"></td>
+        </tr>
+
+    </table>
+    <table class ="table table-sm">
+        <tr>
+            <th>Id: </th>
+                <td>
+                    <input id ="eid" type="number" value="0" readonly>
+                </td>
+        </tr>
+        <tr>
+            <th>Username: </th>
+            <td>
+                <input id ="eusername" type="text" size="25">
+            </td>
+        </tr>
+        <tr>
+            <th>Password: </th>
+            <td>
+                <input id ="epassword" type="password" size="25">
+            </td>
+        </tr>
+        <tr>
+            <th>First name: </th>
+            <td>
+                <input id ="efirstname" type="text" size="25">
+            </td>
+        </tr>
+        <tr>
+            <th>Last name: </th>
+            <td>
+                <input id ="elastname" type="text" size="25">
+            </td>                
+        </tr>
+        <tr>
+            <th>Phonenumber: </th>
+            <td>
+                <input id ="ephonenumber" type="text" size ="15">
+            </td>
+        </tr>
+        <tr>
+            <th>Email: </th>
+            <td>
+                <input id ="eemail" type="text" size ="35">
+            </td>
+        </tr>
+        <tr>
+            <th>IsReviewer: </th>
+                <td>
+                <input id ="eisreviewer" type="checkbox">
+            </td>
+        </tr>
+        <tr>
+            <th>IsAdmin: </th>
+            <td>
+                <input id ="eisadmin" type="checkbox">
+            </td>
+        </tr>
+       
+    </table>
+<button id ="save" class = "btn btn-primary" >Save</button>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
