--- a/user-edit.html
+++ b/user-edit.html
@@ -7,36 +7,18 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/user-edit.css"></link>
+    <link rel="stylesheet" href="css/user-edit.css" type="text/css"></link>
     <script src="js/user-edit.js"></script>
 
 </head>
 <body>
-    <div>
-        <label>User id:</label>
-        <input id ="userid" type="text" >
-        <button id = "get">Get User Detail</button>
-    </div>
-    <table class = "table table-sm">
-        <tr>
-            <th>Id:</th>
-            <td id = "eid" size="35"></td>
-        </tr>
-        <tr>
-            <th>Username:</th>
-            <td id = "eusername"></td>
-        </tr>
-        <tr>
-            <th>Full Name:</th>
-            <td id = "efullname"></td>
-        </tr>
-
-    </table>
+    
     <table class ="table table-sm">
         <tr>
             <th>Id: </th>
                 <td>
-                    <input id ="eid" type="number" value="0" readonly>
+                    <input id ="eid" type="number" value="1">
+                    <button id ="get" class = "btn btn-primary">Get User Detail</button>
                 </td>
         </tr>
         <tr>
@@ -90,15 +72,6 @@
        
     </table>
 <button id ="save" class = "btn btn-primary" >Save</button>
-
-
-
-
-
-
-
-
-
 
 </body>
 </html>
